overflow problem fixed in sec2

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -141,7 +141,8 @@ width: 100vw;
 .sec2 {
   position: relative;
   background-color: white;
-  z-index: 100; }
+  z-index: 100;
+  overflow: hidden; }
   .sec2 p {
     max-width: 85%; }
   .sec2 .cardsContainer {
