--- a/styles/sass/_headerSection-phone.scss
+++ b/styles/sass/_headerSection-phone.scss
@@ -199,6 +199,7 @@ width: 100vw;
   background-color: white;
   //height: 100vh;
   z-index: 100;
+  overflow: hidden;
 
   p {
     max-width: 85%;
